# flipper-sql

./: README.md  docker-compose.yml  pyproject.toml
db/: db.sql  insert.sql
flipper/: cli.py  dbconnector.py  parser.py  queries.py
flipper_sql.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
